bugs squashing

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,7 @@ header {
 }
 
 .nav {
-    /* width: 1300px; */
+    width: 90vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -99,7 +99,6 @@ ul li a {
     grid-template-columns: repeat(2, 1fr);
     width: 640px;
     height: 378px;
-    /* border:2px solid #135e13; */
     border-radius: 60px 0 0 60px;
 }
 
@@ -141,7 +140,6 @@ ul li a {
     border-radius: 0 60px 60px 0;
     background-color: #F2F0F2;
     color: #181A18;
-    /* border: 2px solid; */
     justify-content: center;
     align-items: center;
 }
@@ -165,7 +163,6 @@ ul li a {
     width: 90vw;
     height: 480px;
     padding: 0 80px 0 80px;
-    /* padding: 60px; */
     
 
    
@@ -177,6 +174,7 @@ ul li a {
     line-height: 54px;
     text-align: center;
     margin-bottom: 60px;
+    padding: 0 auto;
 
 }
 
@@ -186,6 +184,7 @@ ul li a {
     font-weight: 400;
     text-align: center;
     margin-bottom: 60px;
+    padding: 0 auto;
 
 
     
@@ -233,7 +232,7 @@ ul li a {
 
 /* this is for tablet screen */
 
-@media(max-width: 768px) {
+@media(max-width: 768px) , (max-width: 820px) , (max-width: 834px) {
 
     .ham {
         width: 30px;
@@ -447,7 +446,7 @@ ul li a {
 /* this is for mobile screen */
 
 
-@media(max-width: 425px) {
+@media(max-width: 425px) , (max-width: 428px) {
 
     header {
         padding: 10px;
@@ -692,7 +691,7 @@ ul li a {
 /* this is for mobile screen Lower screen*/
 
 
-@media(max-width: 375px) {
+@media(max-width: 375px) , (max-width: 320px) {
 
     header {
         padding: 10px;
@@ -775,7 +774,7 @@ ul li a {
         width: 100vw;
         height: 552px;
         margin: 100px auto;
-        padding: 0 25px;
+        padding: 0 auto;
         
     }
 
@@ -854,7 +853,8 @@ ul li a {
     .feature-section {
         width: 90vw;
         height: 980px;
-        padding: 0 25px;
+        padding: 0 auto;
+        margin: 0 auto;
         
     
        
@@ -888,13 +888,14 @@ ul li a {
         display: flex;
         flex-direction: column;
         gap: 20px;
-        padding: 0 10px;
+        margin: 0 auto;
+        padding: 0 auto;
         justify-content: space-between;
         align-items: center;
     }
     
     .feat {
-        width: 305px;
+        width: 300px;
         height: 248px;
         border-radius: 30px;
         background-color: #E2F1E8;
